# duplex

./: .clang-format  CMakeLists.txt  README.rst
1/: CMakeLists.txt  README.rst
src/: fnv_1a_64.cpp  fnv_1a_64.h  global.cpp  global.h  int_types.h  junction.cpp  junction.h  main.cpp  md5.cpp  pch.h  targetver.h
